<resources>
    <string name="action_settings">Settings</string>
    <string name="add_button">Add Task</string>
    <string name="add_to_presets_option">Include in Daily Tasks</string>
    <string name="add_daily_preset">Add Daily Tasks</string>
    <string name="add_daily_task">Add Daily Task</string>
    <string name="app_name">Checklist</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">Confirm</string>
    <string name="daily_task_title">Daily Tasks</string>
    <string name="delete_button">Complete Selected</string>
    <string name="delete_daily_task">Remove Daily Task</string>
    <string name="edit_daily_preset">Edit Daily Tasks</string>
    <string name="edit_hint">Hold down on a task to edit</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="exit">Quit</string>
    <string name="priority_normal_text">Normal</string>
    <string name="priority_rush_text">Medium</string>
    <string name="priority_text">Priority</string>
    <string name="priority_urgent_text">High</string>
    <string name="save_daily_presets">Save</string>
    <string name="select_all">Select All</string>
    <string name="task_text">Task Description</string>
    <string name="reminder_text">Reminder</string>
</resources>
