<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/select_all"
        android:title="@string/select_all"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/add_preset"
        android:title="@string/add_daily_preset"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/set_preset"
        android:title="@string/edit_daily_preset"
        android:orderInCategory="101"
        app:showAsAction="never"/>

    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="200"
        app:showAsAction="never"/>
</menu>
