<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#ffcdcdcd"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="#ffcdcdcd"
        android:id="@+id/edit_task_main_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <View
            android:background="#ff2d2d2d"
            android:layout_height="10dp"
            android:layout_width="match_parent" />

        <TextView
            android:background="#ff2d2d2d"
            android:id="@+id/edit_task_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:text="@string/edit_task_title"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <View
            android:background="#ff2d2d2d"
            android:layout_height="10dp"
            android:layout_width="match_parent" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/task_text"
            android:textColor="#ff000000"
            android:textSize="25sp" />

        <View
            android:background="#ff2d2d2d"
            android:layout_height="2dp"
            android:layout_width="match_parent" />

        <EditText
            android:id="@+id/taskDescriptionEditText"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:textSize="20sp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/priority_text"
            android:textColor="#ff000000"
            android:textSize="25sp" />

        <View
            android:background="#ff2d2d2d"
            android:layout_height="2dp"
            android:layout_width="match_parent" />

        <RadioGroup
            android:id="@+id/priorityRadioGroup"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="20dp" >

            <RadioButton
                android:id="@+id/radio_normal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/priority_normal_text"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_rush"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/priority_rush_text"
                android:textColor="#ffff8d00"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_urgent"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/priority_urgent_text"
                android:textColor="#ffff0300"
                android:textSize="20sp" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/include_reminder_checkbox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="toggleReminderStatus"
            android:text="@string/reminder_text"
            android:textColor="#ff000000"
            android:textSize="25sp" />

        <View
            android:background="#ff2d2d2d"
            android:layout_height="2dp"
            android:layout_width="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

           <Button
               android:id="@+id/reminder_time_picker_button"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_width="wrap_content"
               android:onClick="chooseReminderTime"
               android:paddingLeft="15dp" />

           <Button
               android:id="@+id/reminder_day_picker_button"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_width="wrap_content"
               android:onClick="chooseReminderDay"
               android:paddingRight="15dp" />

            </LinearLayout>

        <View
            android:background="#ff2d2d2d"
            android:layout_height="2dp"
            android:layout_width="match_parent" />

        <CheckBox
            android:id="@+id/addToPresetsCheckBox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="setAsDailyTask"
            android:text="@string/add_to_presets_option"
            android:textColor="#ff0037ff"
            android:textSize="25sp" />

        <View
            android:background="#ff2d2d2d"
            android:layout_height="2dp"
            android:layout_width="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/cancel_button"
            android:layout_height="wrap_content"
            android:layout_width="180dp"
            android:onClick="returnToMainActivityOnCancel"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_height="wrap_content"
            android:layout_width="180dp"
            android:onClick="addItemToList"
            android:text="@string/confirm_button" />

    </LinearLayout>

</RelativeLayout>
