<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffcdcdcd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/firstView"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:id="@+id/theListView"
            android:divider="#ff000000"
            android:dividerHeight="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/firstView"
        android:id="@+id/secondView">
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:onClick="addItem"
            android:id="@+id/add_Button" />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:onClick="deleteSelected"
            android:id="@+id/delete_Button"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_hint"
        android:textSize="15sp"
        android:layout_below="@+id/secondView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>